# pyglet

./: .coveragerc  .gitignore  .hgignore  .hgrc  .readthedocs.yml  .travis.yml  API_CHANGES.rst  CHANGELOG  DESIGN  LICENSE  MANIFEST.in  NOTICE  PY3K  README  README.md  README.rst  README_original.md  RELEASE_NOTES  Roskoboss  TODO  TODO.txt  make.py  multitexturesprite.py  pingserver.py  pyproject.toml  pytest.ini  setup.py  test.py  test_image_load.py  texture_arrays.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions--or-other.md
.github/workflows/: codeql.yml  unittests.yml
benchmarks/: .gitignore  bench.sh
benchmarks/sprite/: bench.py
contrib/: README.md  qt_sprite_preview.py  scenemanager.py  spritebenchmark.py
contrib/aseprite_codec/: README  asedemo.py  aseprite.py  running.ase
contrib/dist_field/: README  genfield.py  renderfield.py
contrib/logo3d/: logo3d.wings
contrib/projection/: projection.py
contrib/scene2d/: resource.py
contrib/spryte/: balls.py  boom.py  cars.py  design.txt  driving.py  los.py  los_app.py  rect.py  spryte.py  tilemap.py  view.py
contrib/svg/: svg_test.py
contrib/toys/: euclid.py  follow_mouse.py  primitives.py  thrust.py
contrib/wydget/: BUGS  LICENSE  README  run_tests.py
doc/: Makefile  README  README.md  conf.py  doc.css  external_resources.rst  gl.txt  image.txt  index.rst  index.txt  internal.txt  main.txt  make.bat  public_packages.dia  pyglet.txt  requirements.txt  tree.txt  upload-doc-current.sh
doc/_static/: default.css  nature.css
doc/_templates/: base.rst  class.rst  exception.rst  function.rst  module.rst  package.rst
doc/ext/: README.md  docstrings.py  sphinx_mod.py
doc/internal/: blacklist.rst  build.rst  contributing.rst  contributing.txt  dist.rst  dist.txt  doc.rst  doc.txt  doc_generation.txt  generated.rst  gl.rst  media_logging_manual.rst  media_logging_manual.txt  media_manual.rst  media_manual.txt  testing.rst  testing.txt  virtualenv.rst  virtualenv.txt  wraptypes.rst  wraptypes.txt
doc/modules/: animation.rst  app.rst  app.txt  canvas.rst  canvas.txt  clock.rst  clock.txt  customtypes.rst  dialog.rst  display.rst  enums.rst  event.rst  font.rst  gl.rst  gl.txt  gui.rst  index.txt  info.rst  info.txt  input.rst  input.txt  math.rst  media.rst  media.txt  media_procedural.txt  media_synthesis.rst  models.rst  pyglet.rst  pyglet.txt  resource.rst  resource.txt  shapes.rst  shapes2d.rst  sprite.rst  sprite.txt  window.rst  window.txt  window_key.rst  window_key.txt  window_mouse.rst
doc/patches/: README  sphinx_ext_autosummary_1.1.3.patch  sphinx_ext_autosummary_1.3.1.patch
doc/programming_guide/: advanced.rst  advanced.txt  beta.rst  camera.rst  context.rst  context.txt  debug.rst  debug.txt  distribution.txt  eventloop.rst  eventloop.txt  events.rst  events.txt  examplegame.rst  examplegame.txt  features1.1.txt  gl.rst  gl.txt  graphics.rst  graphics.txt  gui.rst  image.rst  image.txt  index.txt  input.rst  input.txt  installation.rst  installation.txt  keyboard.rst  keyboard.txt  math.rst  media.rst  media.txt  migration.rst  migration2.rst  models.rst  mouse.rst  mouse.txt  opengles.rst  options.rst  (+15 more)
examples/: apple_remote.py  apple_remote_demo.py  blur.py  browser.py  camera.py  camera_group.py  clipboard.py  collision.py  dpi_scaled_window.py  driving.py  eglcontext.py  event_test.py  events.py  file_dialog.py  fixed_resolution.py  font_comparison.py  gamecontroller.py  gl_test.py  gl_test_2.py  gl_tree_test.py  graphics.py  hello_world.py  html_label.py  image_convert.py  image_display.py  image_test.py  input.py  interpreter.py  invaders.py  joystick.py  keen_intro.py  label_test.py  los.py  media_info.py  media_player.py  mediaplay.py  multiple_windows.py  multiple_windows_run.py  obj_test.py  opengl.py  (+26 more)
examples/3dmodel/: fpscamera.py  model.py
examples/astraea/: README  astraea.py  astraea_sprites.py  setup.py
examples/events/: events_key_state_handler.py  register_event_type.py  window_events.py  window_platform_event.py
experimental/: animation.py  avcodec.py  bind_performance.py  blend.py  carbon_text.py  console.py  customwin.py  directshow.py  flaccodec.py  geoshader_sprite.py  glxgears.py  gstreamer.py  headless.py  lib_avcodec.py  lib_avformat.py  los_pygame.py  ninepatch.py  pinch.py  profile_layout.py  quicktime.py  re_pos_frame.py  rest.py  shader.py  shapes.py  solid.py  sprite.py  spritebenchmark.py  svg_test.py  test_rest.py  win32_text.py  win32priority.py  wxtest.py
pyglet/: __init__.py  __init__.pyi  animation.py  clock.py  com.py  compat.py  console.py  customtypes.py  dds.py  debug.py  enums.py  euclid.py  event.py  font.py  freetype2.py  gl.py  image.py  info.py  ioctl.py  lib.py  math.py  matrix.py  projection.py  resource.py  shader.py  shapes.py  sprite.py  testpy.py  types.py  util.py  window.py
tests/: __init__.py  annotations.py  annotations.py.bak  base.py  blur.py  conftest.py  event_test.py  gl_test.py  gl_test_2.py  gl_tree_test.py  image_test.py  jpeg_test.py  obj_test.py  plan.txt  png_test.py  requirements.txt  run.py  test.py  text_test.py  window_test.py
tools/: al_info.py  alinfo.py  convert.py  ddsview.py  epydoc.config  epydoc_pyglet.css  gen_pyodide_html.py  gencontrollerdb.py  gendist.sh  gendoc.sh  gendoc_html.py  gendoc_pdf.py  gengl.py  gengl_old.py  genmap.py  genwebsite.py  genwrappers.py  gl.template  gl.xml  gl2ctypes.py  gl_info.py  gl_stub.template  info.py  inspect_font.py  license.py  requirements.txt  shape_rotation_translation_spotcheck.py  upload-website.sh  wgl.h
website/: LICENSE.txt  README.rst  README.txt  TODO.txt  about.php  about.xcf  contribute.xml  documentation.xml  download.html  download.php  download.xcf  download.xml  genwebsite.py  get_involved.html  get_involved.php  get_involved.xcf  index.html  index.php  index.xml  news-items.xml  news.php  news.py  news.xml  page_head.php  pyglet-ie6.css  pyglet.css  pyglet.js  pyglet.lektorproject  richard-info.txt  template.xhtml  topnav.php  update-all.php  upload-website.sh
(+2386 files in other folders)
