[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyglet"
authors = [{name = "Alex Holkner & contributors", email = "Alex.Holkner@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
requires-python = ">=3.8"

[project.urls]
Home = "https://pyglet.org"
